fixed navbar stretching

--- a/src/index.css
+++ b/src/index.css
@@ -208,6 +208,8 @@ a:active, a:hover {
   padding: 10px;
   border-right: 3px solid #761a1a;
   flex-basis: 19vw;
+  flex-grow: 0;
+  flex-shrink: 0;
   font-size: 24px;
   text-align: center;
   font-weight: bold;
